2005-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add new column for the 'documentation' component; add
	  0.10.0 and 0.10.1 milestones to all components.

2005-12-05  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/releases/gst-ffmpeg/0.10.0.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.0.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.0.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing 0.10.0

2005-12-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/index.xml:
	  separate plugins and other docs

2005-12-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/Makefile.am:
	* src/htdocs/documentation/index.xml:
	  add plugin docs from core and bad

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/news/news.xml:
	  release

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/releases/gst-ffmpeg/0.9.7.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.9.7.xml: