@@ -1,3 +1,7 @@
+2005-12-16  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/news/status.xml: Dump.
+
 2005-12-11  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/htdocs/bugs/bugs.xml:
